--- a/coc-settings.json
+++ b/coc-settings.json
@@ -7,6 +7,8 @@
 
   "diagnostic.displayByAle": true,
 
+  "cSpell.words": ["wechat"],
+
   "suggest.noselect": false,
   "suggest.completionItemKindLabels": {
     "keyword": "\uf1de",
