--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "prettier.eslintIntegration": true,
+  "prettier.statusItemText": "",
 
   "snippets.userSnippetsDirectory": "~/.config/coc/ultisnips",
 
@@ -8,6 +9,7 @@
   "diagnostic.displayByAle": true,
 
   "cSpell.words": ["wechat", "struct"],
+  "cSpell.showStatus": false,
 
   "suggest.noselect": false,
   "suggest.completionItemKindLabels": {
