--- a/coc-settings.json
+++ b/coc-settings.json
@@ -41,5 +41,9 @@
     "snippet": "\ue60b",
     "typeParameter": "\uf728",
     "default": "\uf29c"
+  },
+
+  "list.insertMappings": {
+    "<C-c>": "do:exit"
   }
 }
