--- a/coc-settings.json
+++ b/coc-settings.json
@@ -11,7 +11,7 @@
 
   "yank.enableCompletion": false,
 
-  "cSpell.words": ["wechat", "struct", "csyakamoz", "leetcode"],
+  "cSpell.words": ["wechat", "struct", "csyakamoz", "leetcode", "curr"],
   "cSpell.showStatus": false,
 
   "coc.preferences.promptInput": false,
