--- a/coc-settings.json
+++ b/coc-settings.json
@@ -45,6 +45,9 @@
     "default": "\uf29c"
   },
 
+  "list.normalMappings": {
+    "<C-c>": "do:exit"
+  },
   "list.insertMappings": {
     "<C-c>": "do:exit"
   }
