chore: normal update

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -8,6 +8,8 @@
 
   "clangd.semanticHighlighting": true,
 
+  "diagnostic.displayByAle": true,
+
   "yank.enableCompletion": false,
 
   "cSpell.words": ["wechat", "struct", "csyakamoz", "leetcode", "curr", "defx"],
