feat: add bash lsp

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -110,6 +110,11 @@
           }
         }
       }
+    },
+    "bash": {
+      "command": "bash-language-server",
+      "args": ["start"],
+      "filetypes": ["sh"]
     }
   }
 }
