chore: allow jump to coc-hover-float-window

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -50,7 +50,7 @@
   "hover.floatConfig": {
     "border": true,
     "highlight": "Normal",
-    "focusable": false
+    "focusable": true
   },
 
   "signature.floatConfig": {
