chore: update lua lsp config

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -112,6 +112,9 @@
           "diagnostics": {
             "enable": true,
             "globals": ["vim"]
+          },
+          "telemetry": {
+            "enable": false
           }
         }
       }
