chore(lsp): add ignoredRootPaths for bash-lsp

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -133,7 +133,8 @@
       "command": "bash-language-server",
       "args": ["start"],
       "filetypes": ["sh", "zsh"],
-      "progressOnInitialization": true
+      "progressOnInitialization": true,
+      "ignoredRootPaths": ["~"]
     },
     "intelephense": {
       "command": "intelephense",
