--- a/coc-settings.json
+++ b/coc-settings.json
@@ -42,10 +42,9 @@
   "diagnostic.signLevel": "warning",
   "diagnostic.messageLevel": "warning",
   "diagnostic.virtualTextLevel": "warning",
-  "diagnostic.errorSign": "",
+  "diagnostic.errorSign": "",
   "diagnostic.warningSign": "",
   "diagnostic.virtualText": true,
-  "diagnostic.virtualTextLineSeparator": "||",
   "diagnostic.virtualTextCurrentLineOnly": false,
 
   "tree.key.invoke": "o",
