spell: add words - csyakamoz, leetcode

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -149,5 +149,6 @@
   },
 
   "prettier.statusItemText": "",
-  "cSpell.showStatus": false
+  "cSpell.showStatus": false,
+  "cSpell.userWords": ["csyakamoz", "leetcode"]
 }
