--- a/coc-settings.json
+++ b/coc-settings.json
@@ -89,7 +89,8 @@
     }
   },
   "diagnostic-languageserver.filetypes": {
-    "sh": "shellcheck"
+    "sh": "shellcheck",
+    "go": "golangci-lint"
   },
   "diagnostic-languageserver.formatFiletypes": {
     "sh": "shfmt",
