--- a/coc-settings.json
+++ b/coc-settings.json
@@ -97,7 +97,8 @@
   "diagnostic-languageserver.filetypes": {
     "sh": "shellcheck",
     "go": "golangci-lint",
-    "proto": "protolint"
+    "proto": "protolint",
+    "php": "phpcs"
   },
   "diagnostic-languageserver.formatFiletypes": {
     "sh": "shfmt",
